--- a/frontendTicketing/src/app/components/companies/companies.component.scss
+++ b/frontendTicketing/src/app/components/companies/companies.component.scss
@@ -118,6 +118,14 @@ body{
   margin: 5px 10px 5px 0px;
   font-size: 13px;
 }
+a {
+  color: dodgerblue !important;
+}
+a:hover {
+  color: blue !important;
+  text-decoration: underline !important;
+  cursor: pointer !important;
+}
 
 .candidate-list .candidate-list-favourite-time {
   margin-left: auto;
