--- a/frontendTicketing/src/app/components/navbar/navbar.component.html
+++ b/frontendTicketing/src/app/components/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 
 <nav class="navbar navbar-expand-md flex-nowrap navbar-new-top">
-  <a href="/" class="navbar-brand"><img src="#" alt=""/>Bootstrap 4</a>
+  <a class="navbar-brand"><img src="#" alt=""/>{{companyName}}</a>
   <ul class="nav navbar-nav mr-auto"></ul>
   <ul class="navbar-nav">
     <li class="nav-item align-items-center d-flex">
-      <button type="button" class="btn btn-black">LogOut</button>
+      <button type="button" (click)="logOut()" class="btn btn-black">LogOut</button>
     </li>
   </ul>
   <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbar2">
@@ -16,12 +16,12 @@
 
     <ul class="navbar-nav w-100 px-3">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Link</a>
+        <a class="nav-link" routerLink="/ticketing">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link">Link</a>
+        <a class="nav-link" routerLink="/ticketing">Link</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link">Link</a>
       </li>
     </ul>
