Se finalizan todas las vistas de historias de usuario

--- a/frontendTicketing/src/app/components/projects/projects.component.html
+++ b/frontendTicketing/src/app/components/projects/projects.component.html
@@ -27,7 +27,7 @@
                     <div class="candidate-list-option">
                       <ul class="list-unstyled">
                         <li><i class="material-icons align-bottom">event</i>{{projects[i].created_at}}</li>
-                        <li class="multiline"><{{projects[i].description}}</li>
+                        <li class="multiline">{{projects[i].description}}</li>
                       </ul>
                     </div>
                   </div>
