--- a/frontendTicketing/src/app/components/navbar/navbar.component.html
+++ b/frontendTicketing/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 
 <nav class="navbar navbar-expand-md flex-nowrap navbar-new-top">
-  <a class="navbar-brand"><img src="#" alt=""/>{{companyName}}</a>
+  <a class="navbar-brand" routerLink="/ticketing"><img/>{{companyName}}</a>
   <ul class="nav navbar-nav mr-auto"></ul>
   <ul class="navbar-nav">
     <li class="nav-item align-items-center d-flex">
@@ -19,7 +19,7 @@
         <a class="nav-link" routerLink="/ticketing">Projects</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/ticketing">Link</a>
+        <a class="nav-link" routerLink="/userStories">User stories</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link">Link</a>
