--- a/frontendTicketing/src/app/components/user-stories/user-stories.component.html
+++ b/frontendTicketing/src/app/components/user-stories/user-stories.component.html
@@ -8,16 +8,16 @@
           <table class="table manage-candidates-top mb-0">
             <thead>
             <tr>
-              <th>Project name <i class="material-icons align-text-bottom" (click)="openCreateProjectDialog()" id="newProject">add</i></th>
+              <th>User story name <i class="material-icons align-text-bottom" (click)="openCreateProjectDialog()" id="newProject">add</i></th>
               <th class="text-center">Edit</th>
               <th class="text-center">Created by</th>
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let project of userStories; index as i" class="candidates-list">
+            <tr *ngFor="let item of userStories; index as i" class="candidates-list">
               <td class="title">
                 <div class="thumb">
-                  <img class="img-fluid" src="https://20o8nn37v3mzb7unq3fsj61e-wpengine.netdna-ssl.com/wp-content/uploads/2018/12/Project-management-tools-bad.jpg" alt="">
+                  <img class="img-fluid" src="https://hocvienagile.com/wp-content/uploads/2021/01/User-Stories-1.jpg" alt="">
                 </div>
                 <div class="candidate-list-details">
                   <div class="candidate-list-info">
@@ -27,6 +27,7 @@
                     <div class="candidate-list-option">
                       <ul class="list-unstyled">
                         <li><i class="material-icons align-bottom">event</i>{{userStories[i].created_at}}</li>
+                        <li><a routerLink="/ticketing/{{userStories[i].project.name}}"><i class="material-icons align-bottom">emoji_objects</i>{{userStories[i].project.name}}</a></li>
                         <li class="multiline">{{userStories[i].description}}</li>
                       </ul>
                     </div>
@@ -35,6 +36,7 @@
               </td>
               <td class="candidate-list-favourite-time text-center">
                 <span class="candidate-list-time"><i class="material-icons edit-icon" (click)="openModifyProjectDialog(userStories[i], i)" >mode_edit</i></span>
+                <span class="candidate-list-time"><i class="material-icons delete-icon" (click)="delete(userStories[i])" >delete</i></span>
               </td>
               <td class="text-center">
                 <span class="candidate-list-timse order-1">{{userStories[i].created_by.username}}</span>
