--- a/frontendTicketing/src/app/components/navbar/navbar.component.html
+++ b/frontendTicketing/src/app/components/navbar/navbar.component.html
@@ -22,7 +22,7 @@
         <a class="nav-link" routerLink="/userStories">User stories</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link">Link</a>
+        <a class="nav-link" routerLink="/tickets">Ticktes</a>
       </li>
     </ul>
   </div>
