--- a/frontendTicketing/src/app/components/tickets/tickets.component.html
+++ b/frontendTicketing/src/app/components/tickets/tickets.component.html
@@ -1,1 +1,52 @@
-<p>tickets works!</p>
+<app-navbar></app-navbar>
+
+<div class="container mt-3 mb-4">
+  <div class="col-lg-9 mt-4 mt-lg-0">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="user-dashboard-info-box table-responsive mb-0 bg-white p-4 shadow-sm">
+          <table class="table manage-candidates-top mb-0">
+            <thead>
+            <tr>
+              <th>Ticket name <i *ngIf="!isCreationDisabled" class="material-icons align-text-bottom" (click)="openCreateTicketDialog()" id="newProject">add</i></th>
+              <th class="text-center">Edit</th>
+              <th class="text-center">Created by</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr *ngFor="let item of tickets; index as i" class="candidates-list">
+              <td class="title">
+                <div class="thumb">
+                  <img class="img-fluid" src="https://hocvienagile.com/wp-content/uploads/2021/01/User-Stories-1.jpg" alt="">
+                </div>
+                <div class="candidate-list-details">
+                  <div class="candidate-list-info">
+                    <div class="candidate-list-title">
+                      <h5 class="mb-0"><a>{{tickets[i].name}}</a></h5>
+                    </div>
+                    <div class="candidate-list-option">
+                      <ul class="list-unstyled">
+                        <li><i class="material-icons align-bottom">event</i>{{tickets[i].created_at}}</li>
+                        <li><a routerLink="/ticketing/{{tickets[i].user_story.project.name}}/{{tickets[i].user_story.display_id}}"><i class="material-icons align-bottom">checklist_rtl</i>{{tickets[i].user_story.name}}</a></li>
+                        <li class="multiline">{{tickets[i].state.name}}</li>
+                        <li class="multiline">{{tickets[i].description}}</li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </td>
+              <td class="candidate-list-favourite-time text-center">
+                <span class="candidate-list-time"><i class="material-icons edit-icon" (click)="openModifyTicketDialog(tickets[i], i)" >mode_edit</i></span>
+                <span class="candidate-list-time"><i class="material-icons delete-icon" (click)="delete(tickets[i])" >delete</i></span>
+              </td>
+              <td class="text-center">
+                <span class="candidate-list-timse order-1">{{tickets[i].created_by.username}}</span>
+              </td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
